--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ dist: trusty
 sudo: required
 
 before_script:
-     - wget "https://storage.googleapis.com/bazel-apt/pool/jdk1.8/b/bazel/bazel_0.5.2_amd64.deb"
-     - sudo dpkg --force-all -i bazel_0.5.2_amd64.deb
+     - wget "https://storage.googleapis.com/bazel-apt/pool/jdk1.8/b/bazel/bazel_0.5.4_amd64.deb"
+     - sudo dpkg --force-all -i bazel_0.5.4_amd64.deb
+     - sudo apt-get install moreutils -y
 
 script:
-  - bazel build //...
-  - bazel test //...
+  - make ci
