--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,9 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library", "go_test")
 
-go_prefix("github.com/kevinburke/handlers")
+gazelle(
+    name = "gazelle",
+    prefix = "github.com/kevinburke/handlers",
+)
 
 go_library(
     name = "go_default_library",
@@ -11,6 +14,7 @@ go_library(
         "logger.go",
         "regex_handler.go",
     ],
+    importpath = "github.com/kevinburke/handlers",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_inconshreveable_log15//:go_default_library",
@@ -30,6 +34,7 @@ go_test(
         "lib_test.go",
         "regex_handler_test.go",
     ],
+    importpath = "github.com/kevinburke/handlers",
     library = ":go_default_library",
     deps = ["@com_github_satori_go_uuid//:go_default_library"],
 )
@@ -38,5 +43,6 @@ go_test(
     name = "go_default_xtest",
     timeout = "short",
     srcs = ["example_test.go"],
+    importpath = "github.com/kevinburke/handlers_test",
     deps = [":go_default_library"],
 )
