--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,14 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.17.x, 1.18.x]
-        platform: [ubuntu-latest]
-    runs-on: ${{ matrix.platform }}
+        go-version: [1.18.x, 1.19.x]
+    runs-on: ubuntu-latest
     steps:
     - name: Install Go
       uses: WillAbides/setup-go-faster@main
       with:
         go-version: ${{ matrix.go-version }}
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
          path: './src/github.com/kevinburke/handlers'
     # staticcheck needs this for GOPATH
